# banksiagui-ios

./: .gitignore  Podfile  README.md
BanksiaIOS/: BsInfo.plist
BanksiaIOS.xcodeproj/: project.pbxproj
BanksiaIOS.xcworkspace/: contents.xcworkspacedata
BanksiaIOS/3rdlib/: PopupView.swift
BanksiaIOS/Base.lproj/: LaunchScreen.storyboard
BanksiaIOS/app/: BanksiaApp.swift
BanksiaIOS/chess/: Book.swift  ChessBoard.swift  ExtensionLib.swift  Hist.swift  Move.swift  Piece.swift  Result.swift  Types.swift
BanksiaIOS/data-ios/: credit.html  help.html
BanksiaIOS/graphics/: ArrowView.swift  GAllPieces.swift  GBoard.swift  GCell.swift  (+1 more)
BanksiaWatch/: Info.plist
BanksiaWatch Extension/: Info.plist
Base.lproj/: LaunchScreen.storyboard
Lc0/: Lc0Info.plist
Lc0Watch/: Info.plist
Lc0Watch Extension/: Info.plist
NN/: Info.plist
NNWatch/: Info.plist
NNWatch Extension/: Info.plist
Stockfish/: SfInfo.plist
StockfishWatch/: Info.plist
StockfishWatch Extension/: BanksiaIOSApp.swift  ComplicationController.swift  ContentView.swift  Info.plist
engines/: engineids.h  engines-bridging-header.h  engines.cpp  stockfishlib.cpp  stockfishlib13.cpp
engines/nemorino/: CMakeLists.txt  Makefile  Material.cpp  Nemorino.cpp  board.cpp  board.h  book.cpp  book.h  deploy-to-s3.bash  evaluation.cpp  evaluation.h  hashtables.cpp  hashtables.h  material.h  network.cpp  network.h  position.cpp  position.h  search.cpp  search.h  settings.cpp  settings.h  tbprobe.cpp  tbprobe.h  timemanager.cpp  timemanager.h  types.h  uci.cpp  uci.h  utils.cpp  utils.h  version.h
(+422 files in other folders)
